# outposts

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .prettierrc.json  Cargo.toml  LICENSE  README.md  angular.json  docker-compose.cd.yaml  docker-compose.yaml  eslint.config.cjs  justfile  nx.json  package.json  pnpm-lock.yaml  transloco.config.js
.cargo/: config.toml
.github/workflows/: cd.yaml  ci.yaml
apps/dev-proxy/: package.json
apps/dev-proxy/.whistle/: .gitignore
apps/dev-proxy/.whistle/properties/: properties
apps/dev-proxy/.whistle/rules/: properties
apps/dev-proxy/.whistle/rules/files/: 0.outposts-web  1.proxy  2.confluence  3.api-robust
apps/outposts-web/: .gitignore  Dockerfile  README.md  custom-webpack.config.ts  eslint.config.cjs  nginx.conf  package.json  project.json  project.ssr.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.mts
apps/outposts-web-e2e/: playwright.config.ts  project.json
apps/outposts-web/plugins/: env-var-plugin.ts
apps/outposts-web/src/: index.html  main.ts  styles.scss
apps/outposts-web/src/app/: app-routing.module.ts  app-theme.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  transloco-config.ts  transloco-root.module.ts
apps/outposts-web/src/app/auth/: auth-callback.component.ts  auth-routing.module.ts  auth.defs.ts  auth.interceptor.ts  auth.module.ts  auth.service.ts  auth.utils.ts
apps/outposts-web/src/app/clipboard/: clipboard.module.ts  clipboard.service.ts
apps/outposts-web/src/app/confluence/: confluence-can-active.guard.ts  confluence-rounting.module.ts  confluence.defs.ts  confluence.module.ts  confluence.service.ts
apps/outposts-web/src/app/confluence/bindings/: ConfluenceDto.ts  ConfluenceUpdateCronDto.ts  ConfluenceUpdateDto.ts  ProfileCreationDto.ts  ProfileDto.ts  SubscribeSourceCreationDto.ts  SubscribeSourceDto.ts  SubscribeSourceUpdateDto.ts
apps/outposts-web/src/app/confluence/dashboard/: dashboard.component.html  dashboard.component.ts
apps/outposts-web/src/app/confluence/workspace/: workspace.component.ts
apps/outposts-web/src/app/core/: app-asset.service.ts  app-config.service.ts
apps/outposts-web/src/app/core/defs/: app-state.defs.ts  delay.ts
apps/outposts-web/src/app/core/layout/: _core.scss  _index.scss  _mixins.scss  _responsive.scss  _theme.scss
apps/outposts-web/src/app/doc/: _index.scss  doc-clipboard-button.component.ts  doc.component.html  doc.component.ts  doc.module.ts  doc.service.ts
apps/outposts-web/src/app/qrcode/: qrcode.module.ts  qrcode.service.ts
apps/outposts-web/src/app/rx/: index.ts  operators.ts
apps/outposts-web/src/assets/data/: icons.json  menu.json  news.json  versions.json
apps/outposts-web/src/assets/i18n/: en.json
apps/outposts-web/src/components/layout/: app.main.component.ts
apps/outposts-web/src/components/spinner/: spinner.component.ts
apps/outposts-web/src/core/providers/: window.ts
apps/outposts-web/src/core/servces/: app-asset.service.ts  app-config.service.ts  app-overlay.service.ts  platform.service.ts
apps/outposts-web/src/domain/auth/: auth-callback.component.ts  auth.defs.ts  auth.service.ts
apps/outposts-web/src/domain/confluence/: confluence-can-active.guard.ts  confluence-rounting.module.ts  confluence.defs.ts  confluence.module.ts  confluence.service.ts
apps/outposts-web/src/environments/: environment.development.ts  environment.ts
apps/outposts-web/src/pages/landing/: footersection.component.html  footersection.component.ts  herosection.component.ts  landing.component.html  landing.component.ts
apps/outposts-web/src/pages/notfound/: index.ts  routes.ts
apps/outposts-web/src/tools/: animation.utils.ts
apps/outposts-web/src/tools/clipboard/: clipboard.module.ts  clipboard.service.ts
apps/outposts-web/src/tools/doc/: doc.module.ts
apps/outposts-web/src/tools/qrcode/: qrcode.module.ts
apps/outposts-web/src/tools/rx/: decorators.ts  index.ts
apps/outposts-web/src/types/: global.d.ts  import-assets.d.ts
crates/confluence/: .gitignore  Cargo.toml  Dockerfile  clippy.toml  init.sql
crates/confluence/prisma/: schema.prisma
crates/confluence/src/: api.rs  config.rs  dto.rs  lib.rs  main.rs  prisma.rs  services.rs
crates/confluence/src/auth/: mod.rs
crates/confluence/src/clash/: http.rs  mod.rs  utils.rs
crates/confluence/src/confluence/: api.rs  dto.rs  mod.rs  services.rs
crates/confluence/src/confluence/auth/: mod.rs
crates/confluence/src/confluence/clash/: mod.rs
crates/confluence/src/confluence/entities/: confluence.rs  mod.rs  profile.rs  subscribe_source.rs
crates/confluence/src/confluence/mux/: mod.rs
crates/confluence/src/entities/: confluence.rs  profile.rs  subscribe_source.rs
crates/confluence/src/error/: mod.rs
crates/confluence/src/migrations/: defs.rs  m20220101_000001_create_table.rs  m20240130_083647_subscribe_source_add_details.rs  m20240130_131930_add_updated_at_triggers.rs  m20240201_061359_cron_confluence_sync_and_mux.rs  m20240213_092818_custom_ua.rs  m20250127_043332_passive_sync.rs  m20250129_025213_subscriber_source_proxy.rs  m20250207_005800_fix_deletions.rs  mod.rs
crates/confluence/src/models/: confluence.rs  prelude.rs  subscribe_source.rs
crates/confluence/src/mux/: mod.rs
crates/confluence/src/tasks/: confluence_cron.rs  mod.rs
crates/confluence/src/tests/: profile1.yaml  profile2.yaml  tmpl.yaml
crates/prisma/: Cargo.toml
logto/: init.sql
nginx/: init.sh
nginx/conf.d/: apps.conf  auth-dashboard.conf  auth.conf  confluence.conf  https.conf.example
postgres/: init.sh  reference.md  upgrade.sh
(+74 files in other folders)
