[workspace]
members = [
  "crates/confluence",
]
resolver = "2"

[profile.release]
# lto = true

# We use CARGO_PROFILE_RELEASE_LTO for production builds
# lto = "fat"

# debug = true
# opt-level = 'z'

[profile.bench]
debug = true
# lto = true

# Without this, printing diff consumes more than a minute.