[package]
name = "confluence"
version = "0.1.0"
edition = "2021"

[lib]
name = "confluence"
path = "src/lib.rs"

[[bin]]
name = "confluence_server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uuid = { version = "^1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
addr = "~0.15.6"
anyhow = "~1.0.86"
axum = "~0.7.5"
axum-extra = "~0.9.0"
biscuit = "~0.7.0"
chrono = { version = "~0.4.31", features = ["serde"] }
dotenvy = "~0.15.7"
futures = "0.3.30"
itertools = "~0.13.0"
lazy_static = "~1.5.0"
log = "0.4.20"
random_name_generator = "~0.3.6"
reqwest = { version = "~0.12.7", features = ["json"] }
sea-orm = { version = "~1.0.1", features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
sea-orm-migration = { version = "~1.0.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
serde = { version = "~1.0.209", features = ["derive"] }
serde-enum-str = "~0.4.0"
serde_json = "~1.0.108"
serde_yaml = "0.9.33"
thiserror = { version = "1.0.50", features = [] }
tokio = { version = "~1.39.3", features = ["full"] }
tower = { version = "~0.5.0", features = ["util"] }
tower-http = { version = "~0.5.0", features = ["fs", "trace", "cors"] }
tracing = "~0.1.40"
tracing-subscriber = { version = "~0.3.18", features = ["env-filter"] }
ts-rs = "~9.0.1"
cron = "~0.12.0"
chrono-tz = "~0.9.0"
tokio-cron-scheduler = "~0.11.0"
monostate = "0.1.11"
