[package]
name = "prisma"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "confluence_prisma"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = { version = "1", features = ["derive"] }
